objects/Lorem_ipsum_dolor_sit_amet_orci_a_116__c.object
<CustomObject>
    <fields>
        <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_100__c</fullName>
        <description>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus mauris sed facilisis dignissim. Curabitur ac dignissim ante, at volutpat nisl. Nulla blandit, sapien non luctus venenatis, tortor ex blandit ex, vel vulputate quam nisl vel ante amet.</description>
        <inlineHelpText>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus mauris sed facilisis dignissim. Curabitur ac dignissim ante, at volutpat nisl. Nulla blandit, sapien non luctus venenatis, tortor ex blandit ex, vel vulputate quam nisl vel ante amet.</inlineHelpText>
        <label>Lorem_ipsum_dolor_sit_amet_orci_a_100</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_1</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_2</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_3</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_4</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_5</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_6</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_8</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_9</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_101__c</fullName>
        <description>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus mauris sed facilisis dignissim. Curabitur ac dignissim ante, at volutpat nisl. Nulla blandit, sapien non luctus venenatis, tortor ex blandit ex, vel vulputate quam nisl vel ante amet.</description>
        <inlineHelpText>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus mauris sed facilisis dignissim. Curabitur ac dignissim ante, at volutpat nisl. Nulla blandit, sapien non luctus venenatis, tortor ex blandit ex, vel vulputate quam nisl vel ante amet.</inlineHelpText>
        <label>Lorem_ipsum_dolor_sit_amet_orci_a_101</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_1</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_2</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_3</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_4</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_5</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_6</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_8</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_9</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_102__c</fullName>
        <description>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus mauris sed facilisis dignissim. Curabitur ac dignissim ante, at volutpat nisl. Nulla blandit, sapien non luctus venenatis, tortor ex blandit ex, vel vulputate quam nisl vel ante amet.</description>
        <inlineHelpText>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rhoncus mauris sed facilisis dignissim. Curabitur ac dignissim ante, at volutpat nisl. Nulla blandit, sapien non luctus venenatis, tortor ex blandit ex, vel vulputate quam nisl vel ante amet.</inlineHelpText>
        <label>Lorem_ipsum_dolor_sit_amet_orci_a_102</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_1</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_2</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_3</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_4</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_5</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_6</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_8</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_9</fullName>
                </value>
                <value>
                    <fullName>Lorem_ipsum_dolor_sit_amet_orci_a_A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lorem_ipsum_dolor_sit_amet_orci_a_116</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lorem_ipsum_dolor_sit_amet_orci_a_1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lorem_ipsum_dolor_sit_amet_orci_a_116s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>